# quodlibet

./: .appveyor.yml  .codecov.yml  .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .hgignore  .readthedocs.yaml  .travis.yml  CLAUDE.md  CONTRIBUTING.rst  COPYING  Dockerfile  GTK4_MIGRATION_STATUS.md  MANIFEST.in  NEWS.rst  README.rst  Tagging  azure-pipelines.yml  codecov.yml  discogs_test.py  docker.sh  flake.nix  he.po  lastfmsync.py  operon.py  pyproject.toml  setup.cfg  setup.py  test_flatpak.sh  tox.ini
quodlibet/: HACKING  MANIFEST.in  Makefile  NEWS  Pipfile  README  TODO  __init__.py  _audio.py  _import.py  _init.py  _main.py  _sanity.sh  build.py  check.py  cli.py  commands.py  config.py  const.py  efwidgets.py  exfalso.desktop  exfalso.desktop.in  exfalso.py  gosd.py  information.py  library.py  main.py  massagers.py  match.py  operon.py  parser.py  pattern.py  player.py  plugins.py  pmp.py  properties.py  pyproject.toml  qltk.py  quickzip.py  quodlibet.1  (+14 more)
quodlibet/browsers/: __init__.py  _base.py  albums.py  audiofeeds.py  base.py  filesystem.py  ipod.py  iradio.py  media.py  paned.py  playlists.py  podcasts.py  search.py  tracks.py
quodlibet/data/: README.rst  build-symbolic.sh  exfalso-symbolic.svg.in  exfalso.1  exfalso.appdata.xml.in  exfalso.desktop.in  io.github.quodlibet.ExFalso.appdata.xml.in  io.github.quodlibet.ExFalso.desktop.in  io.github.quodlibet.QuodLibet-search-provider.ini  io.github.quodlibet.QuodLibet.appdata.xml.in  io.github.quodlibet.QuodLibet.desktop.in  io.github.quodlibet.QuodLibet.service.in  net.sacredchao.QuodLibet.service.in  operon.1  operon.bash  org.mpris.MediaPlayer2.quodlibet.service.in  quodlibet-search-provider.ini  quodlibet-symbolic.svg.in  quodlibet.1  quodlibet.appdata.xml.in  quodlibet.bash  quodlibet.desktop.in  quodlibet.zsh
quodlibet/devices/: __init__.py  _base.py  ipod.py  storage.py  usb.py
quodlibet/docs/: Makefile  README.rst  bugs_repo.rst  conf.py  contact.rst  contributing.rst  downloads.rst  ext.py  extra.css  features.rst  icons.rst  index.rst  license.rst  overview.rst  packaging.rst  requirements.rst  screenshots.rst
quodlibet/errorreport/: __init__.py  faulthandling.py  logdump.py  main.py  minisentry.py  sentrywrapper.py  ui.py
quodlibet/ext/: __init__.py
quodlibet/formats/: __init__.py  _apev2.py  _audio.py  _id3.py  _image.py  _misc.py  _serialize.py  _vorbis.py  aac.py  aiff.py  ape.py  audio.py  dsf.py  flac.py  flac_.py  midi.py  mod.py  monkeysaudio.py  mp3.py  mp4.py  mpc.py  oggvorbis.py  remote.py  spc.py  trueaudio.py  tta.py  vgm.py  wav.py  wavpack.py  wma.py  xiph.py
quodlibet/fsn/: _fsnative.py
quodlibet/gdist/: __init__.py  appdata.py  clean.py  core.py  coverage.py  dbus_services.py  docs.py  gettextutil.py  gobject.py  icons.py  launchers.py  man.py  po.py  scripts.py  search_provider.py  shortcuts.py  tests.py  util.py  zsh_completions.py
quodlibet/images/: Makefile
quodlibet/man/: Makefile  exfalso.1  exfalso.rst  operon.1  operon.rst  quodlibet.1  quodlibet.rst
quodlibet/mmkeys/: MANIFEST  Makefile  README  __init__.py  _base.py  gnome.py  keybinder.py  mmkeys.defs  mmkeys.h  mmkeysmodule.c  osx.py  setup.py  winhook.py
quodlibet/modplug/: Makefile  README  modplug.c
quodlibet/operon/: base.py  commands.py  main.py  util.py
quodlibet/order/: __init__.py  reorder.py  repeat.py
quodlibet/parse/: __init__.py  _match.py  _pattern.py  _query.py
quodlibet/pattern/: __init__.py  _pattern.py
quodlibet/player/: __init__.py  _base.py  nullbe.py
quodlibet/plugins/: __init__.py  _manager.py  cover.py  editing.py  events.py  gstelement.py  gui.py  playlist.py  playorder.py  query.py  remote.py  songshelpers.py  songsmenu.py
quodlibet/po/: Makefile  POTFILES.in  POTFILES.skip  bg.po  cs.po  cs_CZ.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gl_ES.po  he.po  hu.po  it.po  ja.po  ko.po  kr.po  lt.po  lv.po  nb.po  nl.po  nl_NL.po  pl.po  pt.po  ro.po  ru.po  sk.po  sr_RS.po  sr_RS@latin.po  sv.po  tag-names.py  tr.po  uk.po  zh_CN.po  (+1 more)
quodlibet/qltk/: __init__.py  _editpane.py  _editutils.py  about.py  abrepeatwidget.py  advanced_prefs.py  appwindow.py  bookmarks.py  browser.py  cbes.py  ccb.py  chooser.py  color.py  completion.py  controls.py  count.py  cover.py  data_editors.py  dbus_.py  delete.py  download.py  downloader.py  edittags.py  entry.py  exfalso.py  exfalsowindow.py  filesel.py  getstring.py  icons.py  image.py  info.py  information.py  lyrics.py  maskedbox.py  matchdialog.py  menubutton.py  mmkeys.py  models.py  msg.py  notif.py  (+39 more)
quodlibet/query/: __init__.py  _match.py  _parser.py  _query.py
quodlibet/quodlibet/: __init__.py  _import.py  _init.py  _main.py  build.py  cli.py  commands.py  compat.py  config.py  const.py  exfalso.py  main.py  player.py  remote.py  stock.py  update.py  widgets.py  windows.py
quodlibet/senf/: __init__.py  __init__.pyi  _argv.py  _compat.py  _environ.py  _fsnative.py  _print.py  _stdlib.py  _temp.py  _winansi.py  _winapi.py
quodlibet/session/: __init__.py  _base.py  _xsmp.py  gnome.py  xfce.py  xsmp.py
quodlibet/statusicon/: MANIFEST  Makefile  eggstatusicon.c  eggtrayicon.c  setup.py  statusicon.defs  statusiconmodule.c
quodlibet/tests/: __init__.py  conftest.py  gtk_helpers.py  helper.py  test___init__.py  test_appdata_files.py  test_audio.py  test_browsers___init__.py  test_browsers__base.py  test_browsers_albums.py  test_browsers_audiofeeds.py  test_browsers_base.py  test_browsers_collection.py  test_browsers_filesystem.py  test_browsers_iradio.py  test_browsers_media.py  test_browsers_paned.py  test_browsers_playlists.py  test_browsers_search.py  test_browsers_soundcloud.py  test_cli.py  test_commands.py  test_config.py  test_const.py  test_desktop_files.py  test_efwidgets.py  test_encoding.py  test_errorreport.py  test_formats___init__.py  test_formats__album.py  test_formats__audio.py  test_formats__id3.py  test_formats__image.py  test_formats__vorbis.py  test_formats_aac.py  test_formats_aiff.py  test_formats_all.py  test_formats_apev2.py  test_formats_dsf.py  (+166 more)
(+2057 files in other folders)
