[tool.poetry]
name = "quodlibet"
version = "4.3.1"
description = "a music library, tagger, and player"
authors = ["Joe Wreschnig", "Michael Urman", "Steven Robertson",
           "Christoph Reiter", "Nick Boultbee", "(many others)"]
maintainers = ["Christoph Reiter"]
homepage = "https://quodlibet.readthedocs.io/"
documentation = "https://quodlibet.readthedocs.io/"
repository = "https://github.com/quodlibet/quodlibet"
keywords = ["audio", "music", "player", "tags", "gtk"]
license = "GPL-2.0-or-later"

packages = [
    { include = "quodlibet", from = "."}
]


[tool.poetry.dependencies]
python = "^3.5"
mutagen = "^1.44"
senf = "^1.4"
feedparser = "^5.2"
pycairo = "^1.19"
pygobject = "^3.34.0"
musicbrainzngs = {version = "^0.5",  optional = true}
pyinotify = {version = "*", optional = true}
dbus-python = {version = "*", optional = true}

[tool.poetry.extras]
# Use with poetry install -E plugins
plugins = ["musicbrainzngs", "pyinotify", "dbus-python"]



[tool.poetry.dev-dependencies]
pytest = '^5.0'
polib = '*'
pycodestyle = '*'
pyflakes = '*'
sphinx = '*'
sphinx_rtd_theme = '*'
pyGObject-stubs = "*"
xvfbwrapper = {version = "^0.2", platform = "linux"}
flake8 = "^3.7.9"
coverage = {extras = ["toml"], version = "^5.0.3"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"